--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
+    "@anthropic-ai/sdk": "^0.41.0",
     "@auth/pg-adapter": "^0.7.0",
     "@auth/prisma-adapter": "^1.5.0",
     "@aws-sdk/client-s3": "^3.554.0",
