--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "caniuse-lite": "^1.0.30001727",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.3.2",
     "clsx": "^2.1.1",
