--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "quill-to-pdf": "^1.0.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-google-recaptcha-v3": "^1.11.0",
     "react-mathquill": "^1.0.3",
     "react-pdf": "^7.7.1",
     "react-quill": "^2.0.0",
