--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -29,20 +29,7 @@ jobs:
       - name: Refreshing Database Through Prisma
         run: npx prisma migrate deploy
       - name: Building the Project
-        run: |
-          # 1. Create the .env file from your GitHub variable
-          echo "${{vars.ENV}}" > .env
-          
-          # 2. IMPORTANT: Clean the file to remove Windows-style line endings (\r)
-          sed -i 's/\r$//' .env
-          # This command loads the variables from the .env file into the shell
-          set -o allexport
-          source .env
-          set +o allexport
-          
-          # Now run the build command with the variables available
-          npm run build --if-present
-        #run: npm run build --if-present
+        run: npm run build --if-present
       - name: Install PM2
         run: npm install -g pm2
       - name: Refresh Deployment Setup
